--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid black;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.table-container {
+    overflow: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+th,
+td {
+    padding: 10px;
+    border-bottom: 1px solid black;
+    text-align: left;
+   
+}
+
+.test {
+    outline: 1px solid #000;
+    background-color: white;
+    top: 0;
+    right: -1px;
+    position: sticky;
+    z-index: 1; 
+}
+
+.test:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -10px;
+    width: 10px;
+    height: 100%;
+    display: block;
+    background: rgba(0, 0, 0, 0.2);
+    background: linear-gradient(-90deg, rgba(0,0,0,0.2) 0%, rgba(0,0,0,0) 100%);
+}
+
+.buttons {
+    display: flex;
+    gap: 5px;
+}
+
+.button {
+    padding: 5px;
+}
+
+@media (max-width: 500px) {
+        .buttons {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .button {
+            padding: 10px;
+        }
+    
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
